--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
     "react-sortablejs": "^6.1.4",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.4",
     "slick-carousel": "^1.8.1",
     "sortablejs": "^1.15.6",
